fix radio spacing bug

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,7 +15,10 @@ body {
 
 // fix spacing bug
 .lbh-form-group {
-  margin-bottom: 20px !important;
+  margin-bottom: 30px !important;
+}
+.lbh-radios {
+  margin-top: 20px !important;
 }
 
 // counteract z-index on the header
